--- a/TODO
+++ b/TODO
@@ -1118,14 +1118,6 @@ Slower: old=2.030 new=28.202
 
 - possible case studies:
   * OAEP, ZAEP and variants
-for the proof that OAEP is IND-CCA2:
-It seems to need an extension of "move array" in which the equality
-test is replaced with any function f(X,z) such that when
-X is a fresh random number, f(X,z) = g(z) up to small proba.
-This extension could be applied directly to the ROM.
-This function cannot currently be written directly in the LHS
-of an equivalence because it uses pattern matching.
-See examples/obasic/OAEP.ocv
   * SK3 V. Shoup and A. Rubin. Session key distribution using smart
 cards. In Advances in Cryptology, EUROCRYPT, volume 1070/1996 of LNCS,
 pages 321–331. Springer, 1996
@@ -4879,3 +4871,13 @@ by simplifying f(X,z) with X random and z indep of X,
 generating the corresponding equivalence as string,
 and parsing it.
 DONE 7/11/2019
+
+for the proof that OAEP is IND-CCA2:
+It seems to need an extension of "move array" in which the equality
+test is replaced with any function f(X,z) such that when
+X is a fresh random number, f(X,z) = g(z) up to small proba.
+This extension could be applied directly to the ROM.
+This function cannot currently be written directly in the LHS
+of an equivalence because it uses pattern matching.
+See examples/obasic/OAEP.ocv
+Proof of OAEP DONE 7/11/2019
