build correct game in transf_move_array

--- a/TODO
+++ b/TODO
@@ -1,6 +1,6 @@
 TO DO next
 
-0) Test more the new "move array"
+0) Test more and document the new "move array"
 
 1) Instead of generating macros in cryptogen, and then loading
 them, allow some macros to be defined internally
