--- a/TODO
+++ b/TODO
@@ -147,9 +147,9 @@ play with it if needed.
 
 Specify IND$-CPA
 encryption IND-CPA [done]
-encryption IND-CPA + nonce
+encryption IND-CPA + nonce [done, to test and document]
 encryption IND-CPA + INT_CTXT [done]
-encryption IND-CPA + INT_CTXT + nonce [done, test and document]
+encryption IND-CPA + INT_CTXT + nonce [done, to test and document]
 AEAD [done]
 AEAD + nonce [done]
 redo all the above with IND$-CPA 
