--- a/docs/frontend.tex
+++ b/docs/frontend.tex
@@ -1477,7 +1477,8 @@ $n'$ is set by $\texttt{set minAutoCollElim = pest}n'$
 (the default is $n' = 80$),
 or elimination of collisions
 on this data has been manually requested by the command 
-$\texttt{simplify coll\string_elim }\ldots$.
+$\texttt{simplify coll\string_elim(}\ldots\texttt{)}$
+or $\texttt{global\_dep\_anal}\ x\ \texttt{coll\_elim(}\ldots\texttt{)}$.
 
 \sloppy
 
